--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testgit",
-  "homepage": "https://qhsang.github.io/testgit/",
+  "homepage": "npm",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,9 @@
     "preview": "vite preview",
     "start": "npm run dev",
     "deploy": "vite build && gh-pages -d dist"
-
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
