update package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testgit",
-  "homepage": "npm",
+  "homepage": "https://qhsang.github.io/testgit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
